--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,19 +21,19 @@ enable_language(C ASM)
 
 if(ENABLE_FEAT_F4HWN)
     if(NOT AUTHOR_STRING_1)
-        set(AUTHOR_STRING_1 "EGZUMER")
+        set(AUTHOR_STRING_1 "mentanah")
     endif()
     if(NOT AUTHOR_STRING_2)
-        set(AUTHOR_STRING_2 "F4HWN")
+        set(AUTHOR_STRING_2 "@imouroboros")
     endif()
     if(NOT VERSION_STRING_1)
-        set(VERSION_STRING_1 "v0.22")
+        set(VERSION_STRING_1 "V.1.3.3")
     endif()
     if(NOT VERSION_STRING_2)
-        set(VERSION_STRING_2 "v4.2")
+        set(VERSION_STRING_2 "SJ | IGGI")
     endif()
     if(NOT EDITION_STRING)
-        set(EDITION_STRING "Calypso")
+        set(EDITION_STRING "CALYPSO")
     endif()
     if(NOT AUTHOR_STRING)
         set(AUTHOR_STRING "${AUTHOR_STRING_1}+${AUTHOR_STRING_2}")
